k8s-aws/ingress/staging/api.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: api
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:843801476059:certificate/bee88f11-05c8-4c2c-979c-b72df89b884a'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - staging-api.globalforestwatch.org
        - staging-api.resourcewatch.org
        - ui-staging.resourcewatch.org
      secretName: api-certificate
  rules:
    - host: staging-api.globalforestwatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: staging-api.resourcewatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
    - host: ui-staging.resourcewatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: ct-ui
              servicePort: 80
