k8s-aws/ingress/staging/apps.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apps
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:843801476059:certificate/19efdfdc-25cc-48c6-8dbc-bcbd727699ca'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - staging.emissionspathways.org
      secretName: apps-certificate
  rules:
    - host: staging.emissionspathways.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
