k8s-aws/ingress/staging/aws.ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: aws
  namespace: gateway
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:us-east-1:843801476059:certificate/01942605-52bd-4967-9720-499e8ad30ea6'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - aws-staging.resourcewatch.org
      secretName: aws-certificate
  rules:
    - host: aws-staging.resourcewatch.org
      http:
        paths:
          - path: /*
            backend:
              serviceName: nginx
              servicePort: 80
